k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: video-engine
  labels:
    app.kubernetes.io/part-of: video-stream-engine
